Refactor ExperimentService.java